--- a/doc/trex_appendix_mellanox.asciidoc
+++ b/doc/trex_appendix_mellanox.asciidoc
@@ -87,6 +87,10 @@ Installation finished successfully.
 
 To load the new driver, run:
 /etc/init.d/openibd restart
+
+
+To load the new driver, on all the nics, need to repeat this for each NIC mlx5_x
+sudo mlxfwreset -d mlx5_0 --yes r
 ----
 
 
@@ -267,7 +271,7 @@ TRex v2.32 and lower works with OFED 4.1 and it can't work with OFED 4.2/newer
 | 2.32 and below    | *only* 4.1    | CentOS 7.3
 | 2.33-2.56         | *only* 4.3    | CentOS 7.4
 | 2.57 and v2.86    | *only* 4.6    | CentOS 7.6
-| 2.88 and above    | *only* 5.2    | CentOS 7.9
+| 2.89 and above    | *only* GA 5.3-1 | CentOS 7.9
 |=================
 
 WARNING: In our case an upgrade from CentOS 7.3 to CentOS 7.4 using `yum update` didn't work and we needed to *reinstall* everything from scratch see link:https://trex-tgn.cisco.com/youtrack/issue/trex-504[trex-504] 
