Updated console documentation
Signed-off-by: Shlomo Yaakov <syaakov@cisco.com>

--- a/doc/trex_stateless.asciidoc
+++ b/doc/trex_stateless.asciidoc
@@ -11,6 +11,7 @@ TRex Stateless support
 :github_bird_path: https://github.com/cisco-system-traffic-generator/trex-core/tree/master/scripts/bird
 :github_stl_examples_path: https://github.com/cisco-system-traffic-generator/trex-core/tree/master/scripts/automation/trex_control_plane/interactive/trex/examples/stl
 :toclevels: 6
+:doc_console: https://trex-tgn.cisco.com/trex/doc/trex_console.html
 
 include::trex_ga.asciidoc[]
 
@@ -4939,534 +4940,9 @@ Additional profiles and examples are available in the `stl/hlt` folder.
 
 For information about the Python client API, see the link:cp_stl_docs/index.html[Python Client API documentation].
 
-=== Console commands 
+=== Console tutorial 
 
-==== Overview 
-
-The console uses the TRex client API to control TRex.
-
-*Important information about console usage*:
-
-// it seems that all of these provide background info, not guidelines for use. the use of "should" is unclear.
-
-* The console does not save its own state. It caches the server state. It is assumed that there is only one console with R/W permission at any given time, so once connected as R/W console (per user/interface), it can read the server state and then cache all operations. 
-* Many read-only clients can exist for the same user interface. 
-* The console syncs with the server to get the state during connection stage, and caches the server information locally.
-* In case of crash or exit of the console, it will sync again at startup.
-* The order of command line parameters is not important.
-* The console can display TRex stats in real time. You can open two consoles simultaneously - one for commands (R/W) and one for displaying statistics (read only).
-
-==== Ports State
-
-[options="header",cols="^1,3a"]
-|=================
-| State   |    Meaning
-| IDLE    | No streams
-| STREAMS | Has streams. Not transmitting (did not start transmission, or transmission was stopped).
-| WORK    | Has streams. Transmitting.
-| PAUSE   | Has streams. Transmission paused. 
-|=================
-
-
-[source,bash]
-----
-
-  IDLE -> (add streams) -> STREAMS (start) -> WORK (stop) ->  STREAMS (start) 
-                                           |  WORK (pause) -> PAUSE (resume)----
-                                           |                                    | 
-                                           |                                    |
-                                           -------------------------------------    
-----
-
-==== Common Arguments 
-
-The following command line arguments are common to many commands.
-
-===== Help
-You can specify -h or --help after each command to display full description of its purpose and arguments.
-
-*Example*::
-
-[source,bash]
-----
-trex>streams -h
-----
-
-===== Port mask 
-
-Port mask enables selecting range, or set of ports.
-
-*Example*::
-
-[source,bash]
-----
-trex><command>   [-a] [--port 1 2 3]  [--port 0xff]  [--port clients/servers] 
-
-  port mask : 
-    [-a]           : all ports 
-    [--port 1 2 3]  : port 1,2 3
-    [--port 0xff]   : port by mask 0x1 for port 0 0x3 for port 0 and 1
-----
-
-===== Duration 
-
-Duration is expressed in seconds, minutes, or hours. 
-
-*Example*::
-
-[source,bash]
-----
-trex><command> [-d 100] [-d 10m] [-d 1h] 
-  
-  duration:
-   -d 100 : Seconds 
-   -d 10m : Minutes
-   -d 1h  : Hours
-----
-
-
-===== Multiplier 
-
-The traffic profile defines the default bandwidth for each stream. Using the multiplier command line argument, you can set a different bandwidth. You can specify either packets or bytes per second, percentage of total port rate, or simply a factor by which to multiply the original rate.
-
-// not entirely clear how to use multiplier option. need to define "original rate" precisely. in a section below it says "multiply the bandwidth specified in the traffic profile"
-
-*Example*::
-
-[source,bash]
-----
-trex><command> [-m 100] [-m 10gb] [-m 10kpps] [-m 40%]
-  
-  multiplier :
-  
-  -m 100    : Multiply original rate by given factor.
-  -m 10gbps : From graph calculate the maximum rate as this bandwidth for all streams (for each port)
-  -m 10kpps : From graph calculate the maximum rate as this pps for all streams (for each port)
-  -m 40%    : From graph calculate the maximum rate as this precent from total port rate (for each port)
-----
-// What does it mean from graph???
-
-
-==== Commands 
-
-===== connect 
-
-Attempts to connect to the server you were connected to. Can be used after a server restart. Cannot be used to connect to a different server. +
-
-Also:
-
-* Syncs the port info and stream info state.
-* Reads all counter statistics for reference.
-
-// IGNORE: this line helps rendering of next line
-
-*Example*::
-
-[source,bash]
-----
-$connect
-----
-
-===== reset 
-
-Resets the server and client to a known state. Not used in normal scenarios.
-
-// in what scenarios is it used?
-
-* Forces acquire on all ports.
-* Stops all traffic on all ports.
-* Removes all streams from all ports.
-
-
-*Example*::
-
-[source,bash]
-----
-trex>reset  
-----
-
-===== portattr
-
-Configures port attributes.
-
-*Example*::
-
-[source,bash]
-----
-trex>portattr --help
-usage: port_attr [-h] [--port PORTS [PORTS ...] | -a] [--prom {on,off}]
-                 [--link {up,down}] [--led {on,off}] [--fc {none,tx,rx,full}]
-                 [--supp]
-
-Sets port attributes
-
-optional arguments:
-  -h, --help            show this help message and exit
-  --port PORTS [PORTS ...], -p PORTS [PORTS ...]
-                        A list of ports on which to apply the command
-  -a                    Set this flag to apply the command on all available
-                        ports
-  --prom {on,off}       Set port promiscuous on/off
-  --link {up,down}      Set link status up/down
-  --led {on,off}        Set LED status on/off
-  --fc {none,tx,rx,full}
-                        Set Flow Control type
-  --supp                Show which attributes are supported by current NICs
-----
-
-image::images/console_link_down.png[title="Setting link down on port 0 affects port 1 at loopback"]
-
-
-===== clear 
-
-Clears all port stats counters.
-
-*Example*::
-
-[source,bash]
-----
-trex>clear -a
-----
-
-
-===== stats 
-
-Can be used to show global/port/stream statistics. Can also be used to retrieve extended stats from port (xstats).
-
-*Example*::
-
-[source,bash]
-----
-trex>stats --port 0 -p
-trex>stats -s
-----
-
-*Xstats error example*::
-
-[source,bash]
-----
-
-trex>stats -x --port 0 2
-Xstats:
-
-            Name:              |     Port 0:     |     Port 2:
-\------------------------------------------------------------------
-rx_good_packets                |       154612905 |       153744994
-tx_good_packets                |       154612819 |       153745136
-rx_good_bytes                  |      9895225920 |      9839679168
-tx_good_bytes                  |      9276768500 |      9224707392
-rx_unicast_packets             |       154611873 |       153743952
-rx_unknown_protocol_packets    |       154611896 |       153743991
-tx_unicast_packets             |       154612229 |       153744562
-mac_remote_errors              |               1 |               0 #<1>
-rx_size_64_packets             |       154612170 |       153744295
-tx_size_64_packets             |       154612595 |       153744902
-
-----
-
-<1> Error that can be seen only with this command.
-
-// IGNORE - this line helps rendering
-
-===== streams
-
-Shows info about loaded streams on TRex port(s). By default, streams are displayed in a brief summary table:
-
-[source,bash]
-----
-trex>streams 
-
-Port 0:
-
-    ID     |     packet type     |  length  |       mode       |      rate       | next stream
-
-    1      | Ethernet:IP:UDP:Raw |       64 |    continuous    |           1 pps |      -1
-    2      | Ethernet:IP:UDP:Raw |       64 |    continuous    |       1.00 Kpps |      -1
-
-Port 1:
-
-    ID     |     packet type     |  length  |       mode       |      rate       | next stream
-
-    1      | Ethernet:IP:UDP:Raw |       64 |    continuous    |           1 pps |      -1
-    2      | Ethernet:IP:UDP:Raw |       64 |    continuous    |       1.00 Kpps |      -1
-
-----
-
-
-Streams can be filtered by port ID(s) and/or stream ID(s).
-
-[source,bash]
-----
-trex>streams --port 0 1 --id 0
- ..
- ..
-
-----
-
-The `--code` argument is used as follows:
-
-* `--code` can be used without argument to display generated Python code that produces the streams.
-+
-
-[source, bash]
-----
-trex>streams -i 2 --code
-Port: 0
-
-Stream ID: 2
-----
-
-[source, python]
-----
-    packet = (Ether(type=2048) /
-              IP(proto=17, chksum=14507, len=576, ihl=5) /
-              UDP(len=556, chksum=51769) /
-              Raw(load='x' * 548))
-    vm = STLVM()
-    vm.var(name='src', size=4, op='inc', init_value='16.0.0.1', min_value='16.0.0.1', max_value='16.0.0.254', step=1)
-    vm.var(name='dst', size=4, op='inc', init_value='48.0.0.1', min_value='48.0.0.1', max_value='48.0.0.254', step=1)
-    vm.write(fv_name='src', pkt_offset='IP.src', add_val=0, byte_order='big')
-    vm.write(fv_name='dst', pkt_offset='IP.dst', add_val=0, byte_order='big')
-    vm.fix_chksum(offset='IP')
-    stream = STLStream(packet = STLPktBuilder(pkt = packet, vm = vm),
-                       isg = 0.1,
-                       mac_src_override_by_pkt = False,
-                       mac_dst_override_mode = 0,
-                       mode = STLTXCont(pps = 20))
-----
-
-* `--code` can be used with a filename argument to save the streams as a Python profile. In the following example, the specified filename is: */tmp/my_imix.py*
-+
-
-[source,bash]
-----
-trex>streams -p 0 --code /tmp/my_imix.py
-
-Saving file as: /tmp/my_imix.py                              [SUCCESS]
-
-...
-
-bash> cat /tmp/my_imix.py
-----
-
-[source, python]
-----
-# !!! Auto-generated code !!!
-from trex_stl_lib.api import *
-
-class STLS1(object):
-    def get_streams(self, direction = 0, **kwargs):
-        streams = []
-        packet = (Ether(type=2048) /
-                  IP(proto=17, chksum=15037, len=46, ihl=5) /
-                  UDP(len=26, chksum=33554) /
-                  Raw(load='x' * 18))
-        vm = STLVM()
-        vm.var(name='src', size=4, op='inc', init_value='16.0.0.1', min_value='16.0.0.1', max_value='16.0.0.254', step=1)
-        vm.var(name='dst', size=4, op='inc', init_value='48.0.0.1', min_value='48.0.0.1', max_value='48.0.0.254', step=1)
-        vm.write(fv_name='src', pkt_offset='IP.src', add_val=0, byte_order='big')
-        vm.write(fv_name='dst', pkt_offset='IP.dst', add_val=0, byte_order='big')
-        vm.fix_chksum(offset='IP')
-        stream = STLStream(packet = STLPktBuilder(pkt = packet, vm = vm),
-                           mac_src_override_by_pkt = False,
-                           mac_dst_override_mode = 0,
-                           mode = STLTXCont(pps = 28))
-        streams.append(stream)
-        packet = (Ether(type=2048) /
-                  IP(proto=17, chksum=14507, len=576, ihl=5) /
-                  UDP(len=556, chksum=51769) /
-                  Raw(load='x' * 548))
-        vm = STLVM()
-        vm.var(name='src', size=4, op='inc', init_value='16.0.0.1', min_value='16.0.0.1', max_value='16.0.0.254', step=1)
-        vm.var(name='dst', size=4, op='inc', init_value='48.0.0.1', min_value='48.0.0.1', max_value='48.0.0.254', step=1)
-        vm.write(fv_name='src', pkt_offset='IP.src', add_val=0, byte_order='big')
-        vm.write(fv_name='dst', pkt_offset='IP.dst', add_val=0, byte_order='big')
-        vm.fix_chksum(offset='IP')
-        stream = STLStream(packet = STLPktBuilder(pkt = packet, vm = vm),
-                           isg = 0.1,
-                           mac_src_override_by_pkt = False,
-                           mac_dst_override_mode = 0,
-                           mode = STLTXCont(pps = 20))
-        streams.append(stream)
-        packet = (Ether(type=2048) /
-                  IP(proto=17, chksum=13583, len=1500, ihl=5) /
-                  UDP(len=1480, chksum=22936) /
-                  Raw(load='x' * 1472))
-        vm = STLVM()
-        vm.var(name='src', size=4, op='inc', init_value='16.0.0.1', min_value='16.0.0.1', max_value='16.0.0.254', step=1)
-        vm.var(name='dst', size=4, op='inc', init_value='48.0.0.1', min_value='48.0.0.1', max_value='48.0.0.254', step=1)
-        vm.write(fv_name='src', pkt_offset='IP.src', add_val=0, byte_order='big')
-        vm.write(fv_name='dst', pkt_offset='IP.dst', add_val=0, byte_order='big')
-        vm.fix_chksum(offset='IP')
-        stream = STLStream(packet = STLPktBuilder(pkt = packet, vm = vm),
-                           isg = 0.2,
-                           mac_src_override_by_pkt = False,
-                           mac_dst_override_mode = 0,
-                           mode = STLTXCont(pps = 4))
-        streams.append(stream)
-
-        return streams
-
-def register():
-    return STLS1()
-----
-
-
-===== start 
-
-Start transmitting traffic on set of ports.
-
-* Removes all streams.
-* Loads new streams.
-* Starts traffic (can set multiplier, duration, and other parameters).
-* Acts only on ports in "stopped: mode. If `--force` is specified, port(s) are first stopped.
-* Note: If any ports are not in "stopped" mode, and `--force` is not used, the command fails.
-
-// Clarify the note above: If any ports are not...
-
-// IGNORE: this line helps rendering of next line
-
-*Example*::
-
-Start a profile on all ports, with a maximum bandwidth of 10 GB.
-
-[source,bash]
-----
-trex>start -a -f stl/imix.py  -m 10gb
-----
-
-*Example*::
-
-Start a profile on ports 1 and 2, and multiply the bandwidth specified in the traffic profile by 100.
-   
-[source,bash]
-----
-trex>start -port 1 2 -f stl/imix.py  -m 100
-----
-
-
-===== stop
-
-* Operates on a set of ports.
-* Changes the mode of the port(s) to "stopped".
-* Does not remove streams.
-
-// IGNORE: this line helps rendering of next line
-
-*Example*::
-
-Use this command to stop the specified ports.
-
-[source,bash]
-----
-trex>stop --port 0
-
-----
-
-
-===== pause 
-
-* Operates on a set of ports.
-* Changes a working set of ports to "pause" (no traffic transmission) state.
-
-*Example*::
-
-[source,bash]
-----
-trex>pause --port 0
-----
-
-
-===== resume 
-
-* Operates on a set of ports.
-* Changes a working set of port(s) to "resume" state (transmitting traffic again).
-* All ports should be in "paused" status. If any of the ports is not paused, the command fails.
-
-// Clarify the bullet above: If any of the ports...
-
-// IGNORE: this line helps rendering of next line
-
-*Example*::
-
-[source,bash]
-----
-trex>resume --port 0
-----
-
-
-===== update 
-
-Update the bandwidth multiplier for a set of ports.
-
-* All ports must be in "work" state. If any ports are not in "work" state, the command fails.
-
-// IGNORE: this line helps rendering of next line
-
-*Example*::
-
-Multiply traffic on all ports by a factor of 5.
-
-[source,bash]
-----
-trex>update -a -m 5
-----
-
-===== per stream operations
-
-In version v2.34 was added option to pause/resume/update specific stream(s). +
-In future this functionality might be altered/removed. +
-Internally uses API commands:
-
-* pause_streams
-* resume_streams
-* update_streams
-
-In the console, stream ids can be specified via --id argument. +
-(Stream IDs are shown in output of "streams" command) +
-For example, one could use following: +
- +
-> start -f stl/imix.py -p 0 +
-> pause -p 0 --id 1 2 +
-> resume -p 0 --id 1 +
-> update -p 0 --id 1 -m 1kpps
-
-[WARNING]
-=====================================================================
-* Pausing/resuming specific stream(s) does *not* change state of port. +
-* Changing rates of specific streams causes out of sync between CP and DP regarding streams rate. +
-Prior to updating rate of whole port, need to revert changes made to rates of specific streams.
-=====================================================================
-
-
-===== TUI
-
-The textual user interface (TUI) displays constantly updated TRex statistics in a text window.
-
-*Example*::
-        
-[source,bash]
-----
-trex>tui
-----
-
-Enters a Stats mode and displays three types of TRex statistics:
-
-* Global/port stats/version/connected, etc.
-* Per port
-* Per port stream 
-
-
-Keyboard commands in the TUI window:
-
-[cols="5,5", options="header"]
-|=============================
-| Command         | Description   
-| q               | Quit the TUI window (return to console)
-| c               | Clear all counters
-| d, s, l         | Change display between dashboard (d), streams (s) and l (latency) info
-|=============================
-
+see here for link:trex_console.html[console tutorial]
 
 === Benchmarks of 40G NICs
 
