--- a/doc/trex_console.asciidoc
+++ b/doc/trex_console.asciidoc
@@ -1,13 +1,15 @@
 TRex console - commands proposal 
 =================================
-:author: Hanoch Haim
-:email: <hhaim@cisco.com>
-:revnumber: 0.1
 :quotes.++:
 :numbered:
 :web_server_url: http://trex-tgn.cisco.com/trex
 :local_web_server_url: csi-wiki-01:8181/trex
 :toclevels: 4
+:doc_stl_path: https://trex-tgn.cisco.com/trex/doc/trex_stateless.html
+:doc_astf_path: https://trex-tgn.cisco.com/trex/doc/trex_astf.html
+:doc_emu_path: https://trex-tgn.cisco.com/trex/doc/trex_emu.html
+:first_time_running_path: https://trex-tgn.cisco.com/trex/doc/trex_manual.html#_first_time_running
+:github_stl_path: https://github.com/cisco-system-traffic-generator/trex-core/tree/master/scripts/stl
 
 include::trex_ga.asciidoc[]
 
@@ -15,74 +17,502 @@ include::trex_ga.asciidoc[]
 
 === Overview 
 
-The console will use TRex Client API for controling TRex 
-Some guidelines:
+The console uses TRex Client API for controlling TRex. It gives the ability to control the TRex server and get statistic in real-time. 
 
-* Console should not save it own state, it should only cache server state. It assumed there is only one console that has R/W capability so once connected as R/W console (per user/port)  it could read the server state and then cache all the operations. 
-* There could be many read-only clients for same user same ports. The ability to enforce it  does not yet exits in the server (will be done).
-* Console should sync with server to get the state in connection time and cache the server information locally once the state was changed 
-* In case of crash/exit  of the Console it should sync again at startup 
-* Let's assume Console acquire all ports - for simplicity, for now. 
-* Commands will be like bash shell - no order args, many flags  
-* Ability to show stats in real time.  gives the option to open two Console one for stats and one for commands ( many readonly clients)
+* It does not save it is own state, it only caches server state. It syncs the cache state in connection phase. 
+* Only one connection can have the R/W capability (change the state of the server for example, start traffic, or change port state).
+* There could be many read-only connections for same user same ports, so user can acquire some port and start traffic in one Console/script and get statistic from another Console in read only mode
+* There is an ability to acquire specific ports (or all of them)
+* The commands are in python argparse format, `--help` will show the command detail and `-h` the short version of it
+* Ability to show stats in real time. 
 
-=== Ports State 
+The following pages show simple tutorial of TRex console:link:{doc_stl_path}[STL], link:{doc_astf_path}[ASTF] and link:{doc_emu_path}[EMU]
 
-[options="header",cols="^1,3a"]
-|=================
-| state |    meaning
-| IDLE    | no streams, does not work 
-| STREAMS    | with streams, does not work 
-| WORK    | with streams, works 
-| PAUSE    | with streams, pause 
-|=================
+=== Tutorial
+
+It shows some some examples how to use the Console and TRex 
+
+==== Prepare TRex configuration file
+
+If you haven't configure TRex yet follow this tutorial
+
+*Goal*:: Define the TRex physical or virtual ports and create configuration file.
+
+Follow this chapter link:{first_time_running_path}[first time configuration]
 
 
-[source,bash]
-----
+==== Load TRex server, Simple Port commands
 
-  IDLE -> (add streams) -> STREAMS (start) -> WORK (stop) -> STREAMS (start) 
-                                           |   WORK (pause) -> PAUSE (resume )---
-                                           |                                     | 
-                                           |                                     |
-                                        ------------------------------------                                    
-
------
-
-=== Tutorial 
-
-First run trex in interactive mode
+Run trex in interactive mode
 
 [source,bash]
 ----
 [bash]>sudo ./t-rex-64 -i
 ----
 
-on the same machine from a different window connect to to trex 
+on the same machine from a different window connect to trex using the command 
 
 [source,bash]
 ----
-$./trex-console
+[bash]>/trex-console
 ----
 
+Before we start transmit traffic lets see that the port configuration is as we desire.
+We can use the command portattr in the console to see our port configuration.
+[source,bash]
+----
+usage: portattr [-h] [-p PORTS [PORTS ...] | -a] [--prom {on,off}]
+                [--link {up,down}] [--led {on,off}] [--fc {none,tx,rx,full}]
+                [--vxlan-fs [VXLAN_FS [VXLAN_FS ...]]] [--supp]
+                [--mult {on,off}]
 
-from console you can run this 
+Sets port attributes
+
+optional arguments:
+  -h, --help            show this help message and exit
+  -p PORTS [PORTS ...], --port PORTS [PORTS ...]
+                        A list of ports on which to apply the command
+  -a                    Set this flag to apply the command on all available
+                        ports
+  --prom {on,off}       Set port promiscuous on/off
+  --link {up,down}      Set link status up/down
+  --led {on,off}        Set LED status on/off
+  --fc {none,tx,rx,full}
+                        Set Flow Control type
+  --vxlan-fs [VXLAN_FS [VXLAN_FS ...]]
+                        UDP ports for which HW flow stats will be read from
+                        layers after VXLAN
+  --supp                Show which attributes are supported by current NICs
+  --mult {on,off}       Set port multicast on/off
+----
 
 [source,bash]
 ----
-
-# start traffic on all port 
->start -a -m 1 -f stl/imix_1pkt.yaml
-
-# stop traffic on all port
->stop -a 
-
-# show dynamic statistic 
->tui
-
-#stop all and remove all stats
->reset
+[bash]>portattr
 ----
+
+Port Status:
+[source,bash]
+----
+
+     port       |          0           |          1
+----------------+----------------------+---------------------
+driver          |       net_mlx5       |       net_mlx5
+description     |  MT28800 Family [Co  |  MT28800 Family [Co
+link status     |          UP          |          UP
+link speed      |       100 Gb/s       |       100 Gb/s
+port status     |         IDLE         |         IDLE
+promiscuous     |         off          |         off
+multicast       |         off          |         off
+flow ctrl       |         none         |         none
+vxlan fs        |          -           |          -
+                |                      |
+layer mode      |         IPv4         |         IPv4
+src IPv4        |       1.1.1.1        |       2.2.2.2
+IPv6            |         off          |         off
+src MAC         |  24:8a:07:a2:f3:80   |  24:8a:07:a2:f3:81
+                |                      |
+Destination     |       2.2.2.2        |       1.1.1.1
+ARP Resolution  |  24:8a:07:a2:f3:81   |  24:8a:07:a2:f3:80
+                |                      |
+VLAN            |          -           |          -
+                |                      |
+PCI Address     |     0000:04:00.0     |     0000:04:00.1
+NUMA Node       |          0           |          0
+RX Filter Mode  |    hardware match    |    hardware match
+RX Queueing     |         off          |         off
+Grat ARP        |         off          |         off
+                |                      |
+----
+
+We can see that the IPv6 is off and also the VLAN.
+
+If we want to change that we can use VLAN and IPv6 commands.
+But first we will need to configure the specifics ports to service mode( In service mode ports will reply to ARP,
+PING and etc.)
+
+let's say that we want to add vlan with tag 100 to port 0.
+
+1.First we need to configure port 0 to service mode
+[source,bash]
+----
+[bash]>service -p 0
+----
+2.Addinig VLAN with the tag 100 to port 0
+[source,bash]
+----
+[bash]>vlan -p 0 --vlan 100
+----
+
+We can use the portattr command again to verify that we indeed added vlan.
+[source,bash]
+----
+[bash]>portattr
+
+Port Status
+
+     port       |          0           |          1
+----------------+----------------------+---------------------
+driver          |       net_mlx5       |       net_mlx5
+description     |  MT28800 Family [Co  |  MT28800 Family [Co
+link status     |          UP          |          UP
+link speed      |       100 Gb/s       |       100 Gb/s
+port status     |         IDLE         |         IDLE
+promiscuous     |         off          |         off
+multicast       |         off          |         off
+flow ctrl       |         none         |         none
+vxlan fs        |          -           |          -
+                |                      |
+layer mode      |         IPv4         |         IPv4
+src IPv4        |       1.1.1.1        |       2.2.2.2
+IPv6            |         off          |         off
+src MAC         |  24:8a:07:a2:f3:80   |  24:8a:07:a2:f3:81
+                |                      |
+Destination     |       2.2.2.2        |       1.1.1.1
+ARP Resolution  |  24:8a:07:a2:f3:81   |  24:8a:07:a2:f3:80
+                |                      |
+VLAN            |         100          |          -
+                |                      |
+PCI Address     |     0000:04:00.0     |     0000:04:00.1
+NUMA Node       |          0           |          0
+RX Filter Mode  |      fetch all       |      fetch all
+RX Queueing     |         off          |         off
+Grat ARP        |         off          |         off
+
+----
+
+Now the traffic will be send with vlan tag 100.
+
+
+==== Transmitting traffic
+
+Let's start to transmit traffic with the profile link:{github_stl_path}/imix.py[stl/imix.py]
+
+To do that we need to use the start command with the argument -f.
+The start command has several argument but only -f argument (the file path) is required.
+You can read about more about the argument using the command
+[source,bash]
+----
+[bash]>start -h
+----
+
+For now let's transmit the traffic in all port and with multiplier of 10.
+Run the command
+[source,bash]
+----
+[bash]>start -f stl/imix.py -m 10
+----
+
+==== Getting the stats
+
+Showing stats:
+
+In order to see the stats in textual window we can use tui
+Tui shows severals textual windows with stats about the traffic.
+The tui windows are getting updated all the time.
+
+Run the command:
+[source,bash]
+----
+[bash]>tui
+----
+
+Dashboard and utils examples while we TRex transmit the traffic
+[source,bash]
+----
+Dashboard:
+
+Global Statistics
+
+connection   : localhost, Port 4501                       total_tx_L2  : 2.77 Mbps
+version      : STL @ v2.89                                total_tx_L1  : 2.93 Mbps
+cpu_util.    : 0.03% @ 1 cores (1 per dual port)          total_rx     : 2.77 Mbps
+rx_cpu_util. : 0.0% / 0 pps                               total_pps    : 959.22 pps
+async_util.  : 0% / 0.93 bps                              drop_rate    : 0 bps
+total_cps.   : 0 cps                                      queue_full   : 0 pkts
+
+Port Statistics
+
+   port    |         0         |         1         |       total
+-----------+-------------------+-------------------+------------------
+owner      |              root |              root |
+link       |                UP |                UP |
+state      |      TRANSMITTING |      TRANSMITTING |
+speed      |          100 Gb/s |          100 Gb/s |
+CPU util.  |             0.03% |             0.03% |
+--         |                   |                   |
+Tx bps L2  |         1.39 Mbps |         1.39 Mbps |         2.77 Mbps
+Tx bps L1  |         1.46 Mbps |         1.46 Mbps |         2.93 Mbps
+Tx pps     |        479.68 pps |        479.55 pps |        959.22 pps
+Line Util. |               0 % |               0 % |
+---        |                   |                   |
+Rx bps     |         1.39 Mbps |         1.39 Mbps |         2.77 Mbps
+Rx pps     |        479.68 pps |        479.55 pps |        959.22 pps
+----       |                   |                   |
+opackets   |             49270 |             49272 |             98542
+ipackets   |             49270 |             49272 |             98542
+obytes     |          17827594 |          17828252 |          35655846
+ibytes     |          17827594 |          17828252 |          35655846
+tx-pkts    |       49.27 Kpkts |       49.27 Kpkts |       98.54 Kpkts
+rx-pkts    |       49.27 Kpkts |       49.27 Kpkts |       98.54 Kpkts
+tx-bytes   |          17.83 MB |          17.83 MB |          35.66 MB
+rx-bytes   |          17.83 MB |          17.83 MB |          35.66 MB
+-----      |                   |                   |
+oerrors    |                 0 |                 0 |                 0
+ierrors    |                 0 |                 0 |                 0
+
+status:  \
+
+browse:     'ESC' - console, 'q' - quit, 'd' - dashboard, 'u' - util, 's' - streams, 'l' - latency,
+dashboard:  'n' - reset view, 'o' - owned ports, 'a' - all ports, 'c' - clear, 'p' - pause,
+
+----
+
+utils:
+[source,bash]
+----
+
+Global Statistics
+
+connection   : localhost, Port 4501                       total_tx_L2  : 2.77 Mbps
+version      : STL @ v2.89                                total_tx_L1  : 2.93 Mbps
+cpu_util.    : 0.03% @ 1 cores (1 per dual port)          total_rx     : 2.77 Mbps
+rx_cpu_util. : 0.0% / 0 pps                               total_pps    : 956.95 pps
+async_util.  : 0% / 0.93 bps                              drop_rate    : 0 bps
+total_cps.   : 0 cps                                      queue_full   : 0 pkts
+
+Cpu Util(%)
+
+  Thread   | Avg | Latest | -1  | -2  | -3  | -4  | -5  | -6  | -7  | -8  | -9  | -10 | -11 | -12 | -13 | -14
+-----------+-----+--------+-----+-----+-----+-----+-----+-----+-----+-----+-----+-----+-----+-----+-----+----
+ 0  (0,1)  |   0 |      0 |   0 |   0 |   0 |   0 |   0 |   0 |   0 |   0 |   0 |   0 |   0 |   0 |   0 |   0
+
+Mbuf Util
+
+           |   64b   |  128b   |  256b   |  512b   |  1024b  |  2048b  |  4096b  |   9kb   | RAM(MB)
+-----------+---------+---------+---------+---------+---------+---------+---------+---------+--------
+Total:     |   81900 |   40950 |   16380 |   16380 |   16380 |   45175 |    1024 |    1024 |     145
+Used:      |         |         |         |         |         |         |         |         |
+Socket 0:  |      32 |       0 |       0 |       0 |       2 |    8194 |       0 |       0 |      16
+Percent:   |      0% |      0% |      0% |      0% |      0% |     18% |      0% |      0% |
+
+status:  |
+
+browse:     'ESC' - console, 'q' - quit, 'd' - dashboard, 'u' - util, 's' - streams, 'l' - latency,
+ustats:
+----
+
+To navigate between the different windows press ESC and then press the letter that represent the windows you want.
+
+We can also use the command stats to get stats.
+But in this command we are getting stats that are relevant to the moment we run the command.
+
+Streams:
+
+[source,bash]
+-------------------
+[bash]>streams
+
+Port 0:
+
+ ID | name | profile |       packet type       | length |     mode   |  rate  | PG ID | next
+-----------+-----------------+-----------------+-------------------------+----------+-----------
+ 1  |  -   |    -    | Ethernet:IP:UDP:DNS:Raw |     64 | Continuous | 28 pps |   -   |  -
+ 2  |  -   |    -    | Ethernet:IP:UDP:DNS:Raw |    594 | Continuous | 16 pps |   -   |  -
+ 3  |  -   |    -    | Ethernet:IP:UDP:DNS:Raw |   1518 | Continuous | 4 pps  |   -   |  -
+
+Port 1:
+
+ ID | name | profile |       packet type       | length |     mode   |  rate  | PG ID | next
+-----------+-----------------+-----------------+-------------------------+----------+-----------
+ 1  |  -   |    -    | Ethernet:IP:UDP:DNS:Raw |     64 | Continuous | 28 pps |   -   |  -
+ 2  |  -   |    -    | Ethernet:IP:UDP:DNS:Raw |    594 | Continuous | 16 pps |   -   |  -
+ 3  |  -   |    -    | Ethernet:IP:UDP:DNS:Raw |   1518 | Continuous | 4 pps  |   -   |  -
+-------------------
+
+
+Clearing stats
+
+We can clear the ports stats counter with the command clear.
+Run the command clear to clear all the ports stats or some of the ports using the -p argument
+[source,bash]
+----
+[bash]>clear
+----
+
+[source,bash]
+----
+[bash]>stats
+
+Global Statistics
+
+connection   : localhost, Port 4501                       total_tx_L2  : 2.77 Mbps
+version      : STL @ v2.89                                total_tx_L1  : 2.92 Mbps
+cpu_util.    : 0.03% @ 1 cores (1 per dual port)          total_rx     : 2.77 Mbps
+rx_cpu_util. : 0.0% / 0 pps                               total_pps    : 957.55 pps
+async_util.  : 0% / 0.93 bps                              drop_rate    : 0 bps
+total_cps.   : 0 cps                                      queue_full   : 0 pkts
+
+Port Statistics
+
+   port    |         0         |         1         |       total
+-----------+-------------------+-------------------+------------------
+owner      |              root |              root |
+link       |                UP |                UP |
+state      |      TRANSMITTING |      TRANSMITTING |
+speed      |          100 Gb/s |          100 Gb/s |
+CPU util.  |             0.03% |             0.03% |
+           |                   |                   |
+Tx bps L2  |         1.39 Mbps |         1.38 Mbps |         2.77 Mbps
+Tx bps L1  |         1.46 Mbps |         1.46 Mbps |         2.92 Mbps
+Tx pps     |        479.56 pps |        477.99 pps |        957.55 pps
+Line Util. |               0 % |               0 % |
+           |                   |                   |
+Rx bps     |         1.39 Mbps |         1.38 Mbps |         2.77 Mbps
+Rx pps     |        479.56 pps |        477.99 pps |        957.55 pps
+           |                   |                   |
+opackets   |              1437 |              1437 |              2874
+ipackets   |              1437 |              1437 |              2874
+obytes     |            520318 |            520318 |           1040636
+ibytes     |            520318 |            520318 |           1040636
+tx-pkts    |        1.44 Kpkts |        1.44 Kpkts |        2.87 Kpkts
+rx-pkts    |        1.44 Kpkts |        1.44 Kpkts |        2.87 Kpkts
+tx-bytes   |         520.32 KB |         520.32 KB |           1.04 MB
+rx-bytes   |         520.32 KB |         520.32 KB |           1.04 MB
+           |                   |                   |
+oerrors    |                 0 |                 0 |                 0
+ierrors    |                 0 |                 0 |                 0
+
+
+
+
+
+
+trex>stats 
+Global Statistics
+
+connection   : csi-kiwi-02, Port 4501                     total_tx_L2  : 0 bps                          
+version      : STL @ v2.89                                total_tx_L1  : 0 bps                          
+cpu_util.    : 0.0% @ 2 cores (1 per dual port)           total_rx     : 611.69 bps                     
+rx_cpu_util. : 0.0% / 0.44 pps                            total_pps    : 0 pps                          
+async_util.  : 0% / 8.32 bps                              drop_rate    : 0 bps                          
+total_cps.   : 0 cps                                      queue_full   : 0 pkts                         
+
+Port Statistics
+
+   port    |         0         |         1         |         2         |         3         |       total       
+-----------+-------------------+-------------------+-------------------+-------------------+------------------
+owner      |             hhaim |             hhaim |             hhaim |             hhaim |                   
+link       |                UP |                UP |                UP |                UP |                   
+state      |              IDLE |              IDLE |              IDLE |              IDLE |                   
+speed      |           10 Gb/s |           10 Gb/s |           10 Gb/s |           10 Gb/s |                   
+CPU util.  |              0.0% |              0.0% |              0.0% |              0.0% |                   
+--         |                   |                   |                   |                   |                   
+Tx bps L2  |             0 bps |             0 bps |             0 bps |             0 bps |             0 bps 
+Tx bps L1  |             0 bps |             0 bps |             0 bps |             0 bps |             0 bps 
+Tx pps     |             0 pps |             0 pps |             0 pps |             0 pps |             0 pps 
+Line Util. |               0 % |               0 % |               0 % |               0 % |                   
+---        |                   |                   |                   |                   |                   
+Rx bps     |        471.58 bps |          0.04 bps |          0.07 bps |           140 bps |        611.69 bps 
+Rx pps     |          0.31 pps |             0 pps |             0 pps |          0.12 pps |          0.44 pps 
+----       |                   |                   |                   |                   |                   
+opackets   |              6436 |              6360 |                 0 |                 0 |             12796 
+ipackets   |             41368 |             10689 |              4223 |              4227 |             60507 
+obytes     |            433348 |            407850 |                 0 |                 0 |            841198 
+ibytes     |           4858520 |           1012312 |            576136 |            576624 |           7023592 
+tx-pkts    |        6.44 Kpkts |        6.36 Kpkts |            0 pkts |            0 pkts |        12.8 Kpkts 
+rx-pkts    |       41.37 Kpkts |       10.69 Kpkts |        4.22 Kpkts |        4.23 Kpkts |       60.51 Kpkts 
+tx-bytes   |         433.35 KB |         407.85 KB |               0 B |               0 B |          841.2 KB 
+rx-bytes   |           4.86 MB |           1.01 MB |         576.14 KB |         576.62 KB |           7.02 MB 
+-----      |                   |                   |                   |                   |                   
+oerrors    |                 0 |                 0 |                 0 |                 0 |                 0 
+ierrors    |                 0 |                 0 |                 0 |                 0 |                 0 
+
+
+trex>stats -x
+
+trex>stats -x
+Xstats
+
+            Name:              |     Port 0:     |     Port 1:     |     Port 2:     |     Port 3:     
+-------------------------------+-----------------+-----------------+-----------------+----------------
+rx_good_packets                |           42551 |           10902 |            4330 |            4334 
+rx_good_bytes                  |         4823918 |          990306 |          573418 |          573890 
+rx_q0_packets                  |           42551 |           10902 |            4330 |            4334 
+rx_q0_bytes                    |         4823918 |          990306 |          573418 |          573890 
+tx_q0_packets                  |            7254 |            6909 |               0 |               0 
+tx_q0_bytes                    |          329990 |          291258 |               0 |               0 
+mac_local_errors               |               2 |               2 |               0 |               0 
+mac_remote_errors              |               0 |              16 |               0 |               0 
+rx_size_64_packets             |           12177 |            6522 |               0 |               0 
+rx_size_65_to_127_packets      |           17593 |            1086 |            1067 |            1071 
+rx_size_128_to_255_packets     |           12781 |            3264 |            3263 |            3263 
+rx_size_512_to_1023_packets    |               0 |              24 |               0 |               0 
+rx_size_1024_to_max_packets    |               0 |               6 |               0 |               0 
+rx_multicast_packets           |           35565 |            4335 |            4330 |            4334 
+rx_total_packets               |           42556 |           10903 |            4332 |            4334 
+rx_total_bytes                 |         4824548 |          990442 |          573672 |          573890 
+tx_total_packets               |            7254 |            6909 |               0 |               0 
+tx_size_64_packets             |            7209 |            6894 |               0 |               0 
+tx_size_65_to_127_packets      |              15 |              15 |               0 |               0 
+tx_size_512_to_1023_packets    |              24 |               0 |               0 |               0 
+tx_size_1024_to_max_packets    |               6 |               0 |               0 |               0 
+tx_broadcast_packets           |            7073 |            6894 |               0 |               0 
+rx_l3_l4_xsum_error            |               0 |              68 |               0 |               0 
+out_pkts_untagged              |            7254 |            6909 |               0 |               0 
+
+
+# this shows the muliple profile active 
+trex>profiles 
+Port 0:
+
+  Profile ID    |   state    | stream ID  
+----------------+------------+-----------
+       _        |  STREAMS   | [1, 2, 3]  
+
+Port 1:
+
+  Profile ID    |   state    | stream ID  
+----------------+------------+-----------
+
+Port 2:
+
+  Profile ID    |   state    | stream ID  
+----------------+------------+-----------
+
+Port 3:
+
+  Profile ID    |   state    | stream ID  
+----------------+------------+-----------
+
+trex>
+----
+
+==== traffic manipulation
+
+In order to pause the traffic transmitting we can use the command pause
+
+[source,bash]
+----
+[bash]>pause
+----
+The pause command work only on active ports
+
+
+We can resume stopped traffic with the command resume.
+
+[source,bash]
+----
+[bash]>resume
+----
+The resume command work only on paused ports.
+
+We can also stop the traffic with the command stop
+[source,bash]
+----
+[bash]>stop
+----
+The stop command work only on active ports
 
 === Common Arguments 
 
@@ -95,14 +525,17 @@ this gives the ability to choose batch of ports
 
 [source,bash]
 ----
-$command   [-a] [-port 1 2 3]  [-port 0xff]  [-port clients/servers] 
+$command   [--port/-p 1 2 3]
 
   port mask : 
-    [-a]           : all ports 
-    [-port 1 2 3]  : port 1,2 3
-    [-port 0xff]   : port by mask 0x1 for port 0 0x3 for port 0 and 1 
-    [-port clients/servers] : -port clients will choose all the client side ports
+    [--port 1 2 3]  : port 1,2,3
+    [--port 0.<profile_id>] allocate profiles with the specified id
+
+  The default is all of the ports when the -p argument is not being used.
 ----
+
+==== Packet capturing
+Follow this link:{doc_stl_path#_packet_capturing}[tutorial]
 
 ==== Duration 
 
@@ -110,7 +543,7 @@ duration in second or in min or hours
 
 [source,bash]
 ----
-$command[-d 100] [-d 10m] [-d 1h] 
+$command [-d 100] [-d 10m] [-d 1h] 
   
   duration:
    -d 100 : in sec 
@@ -118,479 +551,61 @@ $command[-d 100] [-d 10m] [-d 1h]
    -d 1h  : in hours
 ----
 
-
 ==== Multiplier 
 
 [source,bash]
 ----
-$command [-m 100] [-m 10gb] [-m 10kpps] [-m 40%]
+$command [-m 100] [-m 10bps] [-m 10kbps] [-m 10mbps] [-m 10gbps] [-m 10bpsl1] [-m 10kbpsl1] [-m 10mbpsl1] [-m 10gbpsl1] [-m 10pps] [-m 10kpps] [-m 10mpps] [-m 40%]
   
   multiplier :
   
-  -m 100    : multiply stream file by this factor
-  -m 10gb   : from graph calculate the maximum rate as this bandwidth ( for each port )
-  -m 10kpps : from graph calculate the maximum rate as this pps       ( for each port )
-  -m 40%    : from graph calculate the maximum rate as this precent from total port  ( for each port )
+  -m 100                     : multiply stream file by this factor
+  -m 10bps,..,-m 10gbps      : from graph calculate the maximum rate as this bandwidth ( for each port L2 bandwidth)
+  -m 10bpsl1,..,-m 10gbpsl1  : from graph calculate the maximum rate as this bandwidth ( for each port L1 bandwidth)
+  -m 10pps,...,-m 10mpps     : from graph calculate the maximum rate as this pps       ( for each port )
+  -m 40%                     : from graph calculate the maximum rate as this precent from total port  ( for each port L1 bandwidth)
 ----
 
-
-=== Commands 
-
-
-==== Connect 
+=== List of the commands
 
 [source,bash]
 ----
+>help
+Console Commands:
 
-$trex-con   [--ip  $IP] [--server  $IP] [--rpc-port $PORT] [--async_port port]
+capture -                      Manage PCAP captures
+debug -                        Internal debugger for development.
+events -                       Shows events log
+help -                         Shows This Help Screen
+history -                      Manage the command history
+plugins -                      Show / load / use plugins
+quit -                         Exit the console
+tui -                          Shows a graphical console
+verbose -                      Shows or set verbose mode
 
-   --rpc-port   : change the default server - default 5505 for RPC
+Common Commands:
 
-   --async_port : for sub/pub ZMQ - default 4505 
-
-   --ip or --server  :default 127.0.0.1 the TRex server ip
+acquire -                      Acquire ports
+arp -                          Performs a port ARP resolution
+clear -                        Clear cached local statistics
+connect -                      Connects to the TRex server and acquire ports
+disconnect -                   Disconnect from the TRex server
+global_cfg -                   Set global configuration parameters
+ipv6 -                         Configures IPv6 of a port
+l2 -                           Configures a port in L2 mode
+l3 -                           Configures a port in L3 mode
+map -                          Maps ports topology
+ns -                           Network namespace
+ping -                         Pings the server / specific IP
+pkt -                          Sends a Scapy format packet
+portattr -                     Sets port attributes
+release -                      Release ports
+reset -                        Reset ports
+scan6 -                        Search for IPv6 neighbors
+shutdown -                     Shutdown the server
+stats -                        Show various statistics
+vlan -                         Configures VLAN tagging for a port.
 ----
 
-This command 
-* try to connect to server 
-* send ping  command 
-* sync with  all the ports info / streams info state 
-* read all counters stats for reference
-
-==== reset 
-
-Reset the server and client to a known state - should not be used in a normal scenario 
-
-[source,bash]
-----
-$reset  
-----
-
-- force acuire all the ports
-- Stop all traffic on all the ports
-- Remove all the streams from all the ports
-
-
-==== port 
-
-Configure port state, autoneg, rate etc 
-
-[source,bash]
-----
-$port (port mask) --cfg "auto/10/" 
-
- --cfg string with the configuration name
-
-----
-
-
-==== clear 
-
-Clear all port stats counters 
-
-[source,bash]
-----
-$clear (port mask) 
-----
-
-
-==== stats 
-
-Shows global and port statistic 
-
-[source,bash]
-----
-$stats  (port mask) [-g] [-p] [-ps]   
-
-  -g show only global stats
-  -p only ports stats
-  -ps only port status (type/driver/link-up/down/negotion type etc)
-  
-----
-
-Examples 
-
-
-[source,bash]
-----
-$stats -g
-
-Connected     : 127.0.0.1 4500
-Version       : 1.78 UUID : 12121212
-CPU           : 12.0 %%     
-Total TX      : 20.2 Gb/sec
-Total Rx      : 20.2 Gb/sec
-Total PPS     :     100MPPS
-Total Streams : 10
-Active ports  : 4
-----
-
-[source,bash]
-----
-$stats -p
-
- port        0      1       2       3
- ------------------------------------
- owner	    my	   my      my       my   - place holder no need to implement as we takes all port avali	
- active      on    on       off      off
- tx-bytes   12131  0        0         0
- rx-bytes    0     0        0         0
- tx-pkts     0     0        0         0
- rx-pkts     0     0        0         0
- tx-errors   0     0        0         0
- rx-errors   0     0        0         0
- Tx-Bw       12gb  1.3Gb     0       0
- Rx-Bw	    10mb   11.2mb   0       0
-----
-
-In case of more than four ports should show only the first ports or by mask ( --port mask)
-
-
-[source,bash]
-----
-$stats -ps
-
- --- port status
- port        0      1       2       3
- ------------------------------------
- port-type   I350   I350    I350     I350
- maximum     1Gb	   1Gb	    1Gb     !gb
- link	    on	    on       off    off
-----
-
-
-==== streams
-
-Shows the configured streams on each port/ports  
-Should show from client cache 
-
-[source,bash]
-----
-$streams (port mask)  [--streams mask] [-f]  [--full]  [--graph]
-
-   --port mask,  e.g --port 1 2 3 4
-   --streams mask e.g. --streams 1 2 
-   -f /--full  print stream info in a JSON format with all the information 
-   --graph : add the graph in time of each port stream  
-----
-    
-
-example
-  
-[source,bash]
-----
-$streams 
-
-port 0 : imix/a.yaml 
-
-  stream id  , packet type        , length , mode       , rate    , next    
- + 0     , ip/tcp                 , 64    , continues  , 100KPPS ,   none
- + 1     , ip/udp                 , 128   , burst , 200KPPS  , none
- + 2     , ip/udp                 , 1500  , multi-burst , 100KPPS  , none
-  
- 
-
-port 1 : imix/a.yaml
-
- + 0     , ip/tcp                 , 64    , continues  , 100KPPS ,   none
- + 1     , ip/udp                 , 128   , burst , 200KPPS  , none
- + 2     , ip/udp                 , 1500  , multi-burst , 100KPPS  , none
-
-----
-
-
-show only port 1 and 2 
-
-[source,bash]
-----
-$streams --port 1 2 
-
- ..
- ..
-----
-
-[source,bash]
-----
-$streams --port 0 --streams 0 -f  
-
-
- show the full info on stream 0 and port 0, print in JSON format
-
-----
-        
-
-
-
-==== start 
-
-* work on a set of ports 
-* remove all streams
-* load new streams
-* start traffic with specific multiplier 
-* limit the traffic to a specific duration  
-* port state should be stopped, in case of --force stop the port 
-* in case one of the port is not stop don't start any port
-* all ports should be in state IDLE or STREAMS
-
-[source,bash]
-----
-$start [--force] (port mask) [-f stl/imix.yaml] [-db ab] (duration) (multiplier)  
-
-    
-  stream to load:
-  -f stl/imix.yaml : load from local disk the streams file 
-  --db stream that was loaded to db 
-   
-  force:
-    --force stop ports if they are active 
-
-----
-
-examples
-
-
-[source,bash]
-----
-$start -a -f stl/imix.yaml  -m 10gb
-----
-start this profile on all all ports maximum bandwidth is 10gb
-
-   
-[source,bash]
-----
-$start -port 1 2 -f stl/imix.yaml  -m 100
-----
-start this profile on port 1,2  multiply by 100 
-
-
-[NOTE]
-=====================================
- in case of start command without args, try to remember the last args given and reprint them 
-=====================================
-
-==== stop
-
-* work on a set of ports 
-* change the mode of the port to stopped
-* do not remove the streams
-* in case port state is already stopped don't do anything 
-* all ports should be in state WORK
-
-
-[source,bash]
-----
-$stop (port mask)
-
- See ports command explanation from the start 
-
-----
-
-
-==== pause 
-
-* work on a set of ports 
-* move a wokring set of ports to a state of pause
-* all ports should be in state WORK
-
-
-
-[source,bash]
-----
-$pause  (port mask)
-
- see ports command explanation from start 
-
-----
-
-
-==== resume 
-
-* work on a set of ports 
-* move a wokring set of port to a state of resume 
-* all ports should be in state PAUSE
-
-
-
-[source,bash]
-----
-$resume  (port mask) 
-
- see ports command explanation from start 
-
-----
-
-
-==== restart 
-
-* restart the work on the loaded streams
-* same as start without the -f /--db switch 
-* all ports should be in state STREAMS
-
-[source,bash]
-----
-$restart  (port mask) (duration) (multiplier)  
-
- see ports command explanation from start 
-
-----
-
-==== update 
-
-* all ports should be in state WORK
-
-
-[source,bash]
-----
->update   (port mask) (multiplier)  
-----
-Update the bandwidth multiplier for a mask of ports
-
-
-[NOTE]
-=====================================
- Here we could add the ability to disable/enable specific stream, load new stream dynamically etc. 
-=====================================
-
-
-==== async events queue 
-
-there are two ways to know if somthing async happned 
-
-* pool the state 
-* get async event 
-
-example for events  are:
-
-* link is up/down
-* port id stoped 
-* port id start
-* errors 
-* info 
-
-
-[source,bash]
-----
-$clear_events
-----
-
-clear events queue 
-
-[source,bash]
-----
-$show_events
-----
-show a list of events from the queue 
-
-[source,bash]
-----
-$remove --event [event-id]  --top
-  --event : remove the event-id from the list 
-  --top   : remove the even from the top
-----
-
-
-[source,bash]
-----
-$wait_for_event [event-id]
-----
-wait only in script mode, simple way to wait for event like all port stopped
-
-
-==== stream database commands 
-
-* load/remove/show streams from memory 
-
-
-[source,bash]
-----
-$db_load -f [stream ] -name [name] 
-----
-
-[source,bash]
-----
-$db_remove   -name [name] 
-----
-
-[source,bash]
-----
-$db_show  [--all] [--name $name] [--full]
-----
-
-
-==== script
-
-[source,bash]
-----
-$script -f script_name  
------
-
-run script of commands 
-
-
-==== tui
-
-shows the stats in a textual window (like top)
-	
-[source,bash]
-----
-$tui
-----
-
-enter to a mode of Stats and present 3 type of windows
-* global/port stats/version/connected etc 
-* per port
-* per port streams info
-
-
-get keyboard 
- q - quit the gui window
- c - clear all counters
-
-
-=== Priorty 
-
-* Console logger - JSON-RPC into a file ( req/res) 
-* start/stop/stats/tui/streams/reset
-* db
-* port
-* events 
-* pause/resume/restart/restart
-* scripts
-* move all the debug commands to be dbg_xxx
-* implement advance -m ( by reading graphs)
-* Enforcement of one user/port with R/W capability
-
-=== More ideas 
-
-* define a YAML format that include stream per port inside so in away load each YAML to each port 
-* add ability to load range of ip/mac program in YAML file 
-   fields : 
-       name : ipv4.src
-       offset : 12
-       range : 
-          min_ip : 10.0.0.1/ipv6 addr
-          max_ip : 10.0.0.20
-          inc    : 1
-	  dec    : 1 	
-	  start  : 10.0.0.4
-       
-	name : ipv4.dest
-       	offset : 45
-         range : 
-          min_ip : 10.0.0.1
-          max_ip : 10.0.0.2
-
-  
-=== Change log
-
-[options="header",cols="^1,^h,3a"]
-|=================
-| Version |  name   |  meaning
-| 1.00    |  Hanoch Haim (hhaim) |
-- first version
-| 1.01    |  Hanoch Haim (hhaim) |
-- Incorporate Itay comments
-|=================
-
-
+Have a look in the stateless manual for how to use capture commands to capture traffic in rx or tx, using linux name-space for creating CP protocols simulation and more 
 
